[package]
name = "pg_epanet"
version = "0.1.0-rc.1"
edition = "2021"
description = "PostgreSQL extension: EPANET INP parser with PostGIS geometry and hydraulic simulation"
license = "MIT"
repository = "https://github.com/danimarindev/pg_epanet"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg19 = ["pgrx/pg19", "pgrx-tests/pg19" ]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
pgrx = "=0.19.1"

[dependencies.pgrx-bench]
version = "=0.19.1"
optional = true

[dev-dependencies]
[dev-dependencies.pgrx-tests]
version = "=0.19.1"

[build-dependencies]
cmake = "0.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
